[project]
name = "tokenizer-mcp"
version = "1.0.1"
description = "MCP server that counts tokens for Anthropic, OpenAI, Qwen, and SDXL models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.83.0",
    "mcp[cli]>=1.26.0",
    "tiktoken>=0.12.0",
    "transformers>=5.2.0",
]
